--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>testing git</title>
 </head>
 <body>
-    <h1>This is a Header 1 tag....</h1>
-    <p>We are inside paragraph tag!!</p>
-    <p>This is a second para...</p>
+    <h1>Welcome.</h1>
+    <p>Thank you for wasting your precious time </p>
+    <p>This is a second paragraph.
+        Visit again.</p>
 </body>
 </html>
